--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500&display=swap");
-
 root {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,8 +10,11 @@ root {
 
 @layer utilities {
   * {
-    padding: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    scrollbar-width: thin;
+    scrollbar-color: #4b5563 rgba(0, 0, 0, 0);
   }
 
   html,
@@ -42,5 +41,53 @@ root {
   .no-scrollbar {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #4b5563; /* Color of the scrollbar handle */
+    border-radius: 5px; /* Rounded corners of the scrollbar handle */
+  }
+
+  ::-webkit-scrollbar-button {
+    display: none; /* Hide the scrollbar arrows */
+  }
+
+  ::-webkit-scrollbar-track {
+    display: none; /* Hide the scrollbar track */
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #4b5563; /* Color of the scrollbar handle when hovered */
+  }
+}
+
+@layer base {
+  /* //chillax */
+  @font-face {
+    font-family: "Chillax";
+    src: url("/fonts/chillax/Chillax-Light.woff2") format("woff2");
+    font-weight: 300;
+  }
+
+  @font-face {
+    font-family: "Chillax";
+    src: url("/fonts/chillax/Chillax-Regular.woff2") format("woff2");
+    font-weight: 400;
+  }
+
+  @font-face {
+    font-family: "Chillax";
+    src: url("/fonts/chillax/Chillax-Medium.woff2") format("woff2");
+    font-weight: 500;
+  }
+
+  @font-face {
+    font-family: "Chillax";
+    src: url("/fonts/chillax/Chillax-Semibold.woff2") format("woff2");
+    font-weight: 600;
   }
 }
