--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,21 @@ root {
   ::-webkit-scrollbar-thumb:hover {
     background-color: #4b5563; /* Color of the scrollbar handle when hovered */
   }
+
+  /* input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    border: 1px solid #434346;
+    -webkit-text-fill-color: #f1f1f1;
+    -webkit-box-shadow: 0 0 0px 1000px #1b1b1c inset;
+    transition: background-color 5000s ease-in-out 0s;
+  } */
 }
 
 @layer base {
