--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* @import "instantsearch.css/themes/satellite.css"; */
+
 root {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -62,6 +64,10 @@ root {
 
   ::-webkit-scrollbar-thumb:hover {
     background-color: #4b5563; /* Color of the scrollbar handle when hovered */
+  }
+
+  input[type="search"]::-webkit-search-cancel-button {
+    display: none;
   }
 
   /* input:-webkit-autofill,
