--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,17 @@ root {
     display: none;
   }
 
+  .autofill-auth {
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus {
+      border: 2px solid #1e40af;
+      -webkit-text-fill-color: #9ca3af;
+      -webkit-box-shadow: 0 0 0px 1000px rgba(0, 0, 0, 0) inset;
+      transition: background-color 3000s ease-in-out 0s;
+    }
+  }
+
   /* input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus,
@@ -79,7 +90,7 @@ root {
   select:-webkit-autofill,
   select:-webkit-autofill:hover,
   select:-webkit-autofill:focus {
-    border: 1px solid #434346;
+    border: 1px solid #1e40af;
     -webkit-text-fill-color: #f1f1f1;
     -webkit-box-shadow: 0 0 0px 1000px #1b1b1c inset;
     transition: background-color 5000s ease-in-out 0s;
