--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ root {
     margin: 0;
     box-sizing: border-box;
     scrollbar-width: thin;
-    scrollbar-color: #4b5563 rgba(0, 0, 0, 0);
+    scrollbar-color: #27272a rgba(0, 0, 0, 0);
   }
 
   html,
@@ -50,7 +50,7 @@ root {
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: #4b5563; /* Color of the scrollbar handle */
+    background-color: #27272a; /* Color of the scrollbar handle */
     border-radius: 5px; /* Rounded corners of the scrollbar handle */
   }
 
@@ -63,7 +63,7 @@ root {
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: #4b5563; /* Color of the scrollbar handle when hovered */
+    background-color: #27272a; /* Color of the scrollbar handle when hovered */
   }
 
   input[type="search"]::-webkit-search-cancel-button {
